# hakim_ai

./: .gitignore  LICENSE  Readme.md  get_processor.py  pyproject.toml  requirements.txt  test_llava.py  test_tok.py  thresholds.json
config/: default.yaml  kaggle.yaml  prod.yaml  prod.yml  test.yaml
hakim_ai/: __init__.py  config.py  multi_slide_pipeline.py  pipeline.py  types.py
hakim_ai/benchmarking/: __init__.py  agent_metrics.py  system_metrics.py
hakim_ai/foundation_models/: __init__.py  base_encoder.py  conch_adapter.py  segformer_adapter.py  uni_adapter.py
hakim_ai/layer0_input/: __init__.py  qc_agent.py  wsi_loader.py
hakim_ai/layer1_router/: __init__.py  router_agent.py
hakim_ai/layer2_evidence/: __init__.py  description_agent.py  navigation_agent.py  segmentation_agent.py
hakim_ai/layer3_fusion/: __init__.py  clinical_context_agent.py  knowledge_retrieval_agent.py  molecular_agent.py  radiology_agent.py
hakim_ai/layer4_verification/: __init__.py  confidence_calibrator.py  logic_agent.py
hakim_ai/layer5_synthesis/: __init__.py  diagnosis_agent.py  explanation_agent.py  longitudinal_agent.py  report_agent.py
hakim_ai/layer6_interface/: __init__.py  feedback_capture.py  ui_renderer.py
hakim_ai/models/: __init__.py  abmil.py  grade_classifier.py  multi_task_head.py
hakim_ai/training/: __init__.py  calibration.py  data_manager.py  dataset_gashistsdb.py  dataset_gchtid.py  dataset_tcga_stad.py  feature_extraction.py  train_mil_classifier.py  train_router.py  train_segmentation.py
hakim_ai/utils/: __init__.py  image_utils.py  logging_utils.py  rag_store.py
scripts/: __init__.py  benchmark_pipeline.py  calibrate_thresholds.py  demo.py  prepare_data.py  run_pipeline.py
tests/: __init__.py  conftest.py  test_layer0_and_1.py  test_layer2_and_3.py  test_layer4_verification.py  test_layer5_synthesis.py  test_layer6_interface.py  test_pipeline.py  test_real_mode.py  test_utils_and_models.py
